# compiler-sim-gpu

./: README.md
compiler-sim-gpu/: CMakeLists.txt  README.md
compiler-sim-gpu/.github/workflows/: ci.yml
compiler-sim-gpu/docs/: architecture.md  debugging.md  ir_examples.md
compiler-sim-gpu/examples/: matmul.dsl  traced_execution.json  transformer.dsl
compiler-sim-gpu/include/compiler_sim/: DebugInfo.h  IRNode.h  PassManager.h  SymbolTable.h
compiler-sim-gpu/passes/: LoopUnrollingPass.cpp  MemoryMapPass.cpp  TensorFusionPass.cpp
compiler-sim-gpu/runtimes/: mock_gpu_runtime.cpp
compiler-sim-gpu/src/: DebugInfo.cpp  IRNode.cpp  PassManager.cpp  SymbolTable.cpp  main.cpp
compiler-sim-gpu/tests/: test_codegen.cpp  test_debug_hooks.cpp  test_ir_lowering.cpp
